# integra8

./: .gitignore  Cargo.toml  LICENSE  README.md  make.sh
contrib/formatters/libtest_formatter/: Cargo.toml
contrib/formatters/libtest_formatter/src/: lib.rs
contrib/formatters/serde_formatter/: Cargo.toml
contrib/formatters/serde_formatter/src/: lib.rs  parameters.rs
contrib/formatters/tree_formatter/: Cargo.toml
contrib/formatters/tree_formatter/src/: lib.rs  parameters.rs  print_tree.rs  progress.rs  render.rs  styles.rs  tree.rs  writer.rs
core/async_runtime/: Cargo.toml
core/async_runtime/src/: lib.rs
core/components/: Cargo.toml
core/components/src/: acceptance_criteria.rs  bookends.rs  context.rs  delegates.rs  lib.rs  macros.rs  meta.rs  suite.rs  test.rs
core/decorations/: Cargo.toml
core/decorations/src/: bookends.rs  hierarchy.rs  lib.rs  suite.rs  test.rs
core/decorations_impl/: Cargo.toml
core/decorations_impl/src/: lib.rs  parse.rs
core/decorations_impl/src/bookends/: bookend_attributes.rs  register_bookend.rs
core/decorations_impl/src/decorations/: mod.rs
core/decorations_impl/src/entry/: mod.rs
core/decorations_impl/src/exec_fn/: mod.rs
core/decorations_impl/src/suite/: mod.rs  register_suite.rs  suite_attributes.rs
core/decorations_impl/src/test/: register_test.rs  test_attributes.rs
core/formatters/: Cargo.toml
core/formatters/src/: lib.rs  none.rs  pretty.rs
core/formatters/src/tree/: mod.rs  print_tree.rs
core/integra8/: Cargo.toml
core/integra8/src/: async_runtime.rs  lib.rs  parameters.rs  strategy.rs
core/integra8/src/channel/: mod.rs  notify.rs  observers.rs  sink.rs  source.rs
core/integra8/src/components/: acceptance_criteria.rs  bookends.rs  context.rs  delegates.rs  macros.rs  meta.rs  mod.rs  scheduling.rs  suite.rs  test.rs
core/integra8/src/core/: child_process.rs  mod.rs  root_process.rs
core/integra8/src/decorations/: bookends.rs  hierarchy.rs  location.rs  mod.rs  suite.rs  test.rs
core/integra8/src/formaters/: mod.rs  none.rs  pretty.rs
core/integra8/src/formatters/: mod.rs  none.rs
core/integra8/src/macros/: mod.rs
core/integra8/src/results/: mod.rs  stdio.rs
core/integra8/src/runner/: context.rs  fixture.rs  mod.rs  notify.rs  schedule_runner.rs
core/integra8/src/scheduling/: components.rs  iter.rs  mod.rs  scheduler.rs  state_machine.rs
core/results/: Cargo.toml
core/results/src/: lib.rs
core/results/src/artifacts/: mod.rs  stdio.rs
core/results/src/report/: mod.rs
core/results/src/summary/: counts.rs  mod.rs  results_iter.rs  summary.rs
core/runner/: Cargo.toml
core/runner/src/: fixture.rs  lib.rs  notify.rs  schedule_runner.rs
core/runner/src/executor/: mod.rs
core/runner/src/state/: mod.rs  model.rs
core/scheduling/: Cargo.toml
core/scheduling/src/: components.rs  iter.rs  lib.rs  scheduler.rs
examples/: Cargo.toml  README.md
examples/0_cheat_sheat/: Cargo.toml
examples/0_cheat_sheat/src/: main.rs
examples/1_setup_test_teardown/a_test_basics/: Cargo.toml
examples/1_setup_test_teardown/a_test_basics/src/: main.rs
examples/1_setup_test_teardown/b_setup_and_tear_down_basics/: Cargo.toml
examples/1_setup_test_teardown/b_setup_and_tear_down_basics/src/: main.rs
examples/1_setup_test_teardown/c_setup_and_tear_down_failure_behavior/: Cargo.toml
examples/1_setup_test_teardown/c_setup_and_tear_down_failure_behavior/src/: main.rs
examples/1_setup_test_teardown/d_parallel_test_behavior/: Cargo.toml
examples/1_setup_test_teardown/d_parallel_test_behavior/src/: main.rs
examples/1_setup_test_teardown/e_timeout_behavior/: Cargo.toml
examples/1_setup_test_teardown/e_timeout_behavior/src/: main.rs
examples/1_setup_test_teardown/f_multi_file_test_order/: Cargo.toml
examples/1_setup_test_teardown/f_multi_file_test_order/src/: a_test_mod.rs  b_test_mod.rs  main.rs
examples/2_suites/a_suites_basics/: Cargo.toml
examples/2_suites/a_suites_basics/src/: main.rs
examples/2_suites/b_cascading_failure_behavior/: Cargo.toml
examples/2_suites/b_cascading_failure_behavior/src/: main.rs
examples/2_suites/c_parallel_suite_behavior/: Cargo.toml
examples/2_suites/c_parallel_suite_behavior/src/: main.rs
examples/3_test_main/a_global_settings/: Cargo.toml
examples/3_test_main/a_global_settings/src/: main.rs
examples/3_test_main/b_custom_parameters/: Cargo.toml
examples/3_test_main/b_custom_parameters/src/: main.rs
examples/3_test_main/c_generate_test_data/: Cargo.toml
examples/3_test_main/c_generate_test_data/src/: main.rs
examples/4_pitfalls/a_use_child_process/: Cargo.toml
examples/4_pitfalls/a_use_child_process/src/: main.rs
examples/4_pitfalls/b_nested_sequential_behavior/: Cargo.toml
examples/4_pitfalls/b_nested_sequential_behavior/src/: main.rs
examples/4_pitfalls/c_timeout_limitations/: Cargo.toml
examples/4_pitfalls/c_timeout_limitations/src/: main.rs
examples/acceptance_tests/: Cargo.toml
examples/acceptance_tests/src/: main.rs
examples/basic/parallelizable_and_sequential/: Cargo.toml
examples/basic/parallelizable_and_sequential/src/: main.rs
examples/basic/setup_and_tear_down/: Cargo.toml
examples/basic/setup_and_tear_down/src/: main.rs
examples/basic/setup_and_tear_down_on_failure/: Cargo.toml
examples/basic/setup_and_tear_down_on_failure/src/: main.rs
examples/basic/test_basics/src/: main.rs
examples/basic/test_timing/: Cargo.toml
examples/basic/test_timing/src/: main.rs
examples/basic_sample/: Cargo.toml
examples/basic_sample/src/: main.rs
examples/basic_sample/src/tests/: mod.rs
examples/execution_context/custom_parameters/: Cargo.toml
examples/execution_context/generate_test_data/: Cargo.toml
examples/green/simple_test_with_tokio/: Cargo.toml
examples/sandbox/basic_sample/: Cargo.toml
examples/simple_test/: Cargo.toml
examples/simple_test/src/: main.rs
examples/suites/: Cargo.toml
examples/suites/src/: main.rs
examples/test_examples/: Cargo.toml
examples/test_examples/src/: main.rs
examples/validate_examples/: Cargo.toml
examples/validate_examples/src/: main.rs
(+83 files in other folders)
