[package]
name = "integra8_async_runtime"
version = "0.0.2-alpha"
edition = "2018"
description = """
Simple abstraction layer for interacting with different async runtimes for the Integra8 test framework
"""
repository = "https://github.com/jamesjharper/integra8"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
documentation = "https://api.integra8.rs/v0.0.2-alpha/integra8/"
categories = ["development-tools" ]

[dependencies]
async-std = { version = "1.10.0", optional = true}
tokio = { version = "1.15.0",  features = ["rt", "sync", "time", "rt-multi-thread"], optional = true}
# TODO: Does it make sense to patch though new_current_thread / rt?

[features]
async-std-runtime = ["async-std"]
tokio-runtime = ["tokio"]
