[package]
name = "integra8_components"
version = "0.0.2-alpha"
edition = "2018"
description = """
A collection of fundamental test components used by the Integra8 test framework
"""
repository = "https://github.com/jamesjharper/integra8"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
documentation = "https://api.integra8.rs/v0.0.2-alpha/integra8/"
categories = ["development-tools" ]

[dependencies]
futures = "0.3"
indexmap = {version = "1.8.0", features = ["serde-1"]}
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

