[package]
name = "integra8_decorations"
version = "0.0.1-alpha"
edition = "2018"
description = """
A collection flat shorthand notation objects used by the Integra8 test framework for building test suite hierarchies. 
"""
repository = "https://github.com/jamesjharper/integra8"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
documentation = "https://api.integra8.rs/v0.0.1-alpha/integra8/"
categories = ["development-tools" ]

[dependencies]
indexmap = "1.7.0"

[dependencies.integra8_components]
version = "0.0.1-alpha"
path = "../components"