[package]
name = "integra8_decorations_impl"
version = "0.0.4-alpha"
edition = "2018"
description = """
Procedural macros for declaring test components used by the Integra8 test framework.
"""
repository = "https://github.com/jamesjharper/integra8"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
documentation = "https://api.integra8.rs/v0.0.4-alpha/integra8/"
categories = ["development-tools" ]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0.32"
humantime = "2.1.0"
