[package]
name = "integra8_formatters"
version = "0.0.1-alpha"
edition = "2018"
description = """
Test output formatters for displaying test results 
"""
repository = "https://github.com/jamesjharper/integra8"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
documentation = "https://api.integra8.rs/v0.0.1-alpha/integra8/"
categories = ["development-tools" ]

[dependencies]
structopt = "0.3"
term = "0.5"

[dependencies.integra8_context]
version = "0.0.1-alpha"
path = "../context"

[dependencies.integra8_components]
version = "0.0.1-alpha"
path = "../components"

[dependencies.integra8_results]
version = "0.0.1-alpha"
path = "../results"