[package]
name = "integra8"
version = "0.1.0"
edition = "2018"

[dependencies]
integra8_context = {path = "../context"}
integra8_decorations = {path = "../decorations"}
integra8_decorations_impl = {path = "../decorations_impl"}
integra8_components = {path = "../components"}
integra8_scheduling = {path = "../scheduling"}
integra8_results = { path = "../results"}
integra8_formatters = {path = "../formatters"}
integra8_runner = {path = "../runner"}
integra8_async_runtime = {path = "../async_runtime"}

structopt = "0.3"
term = "0.5"
linkme = "0.2"

async-process = "1.2.0"
futures = "0.3.17"


[features]
sync = []
async = []

async-std-runtime = [
    "async", 
    "integra8_async_runtime/async-std-runtime",
    "integra8_scheduling/async-std-runtime",
    "integra8_decorations_impl/async-std-runtime",
    "integra8_runner/async-std-runtime",
]

tokio-runtime = [
    "async", 
    "integra8_async_runtime/tokio-runtime",
    "integra8_scheduling/tokio-runtime",
    "integra8_decorations_impl/tokio-runtime",
    "integra8_runner/tokio-runtime",
]

