[package]
name = "integra8"
version = "0.0.5-rc1"
edition = "2018"
description = """
Integra8 rust integration test framework Rust with a focus on productivity, extensibility, and speed.
"""

repository = "https://github.com/jamesjharper/integra8"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
# Work in progress
#documentation = "https://api.integra8.rs/v0.0.5-rc1/integra8/"
categories = ["development-tools" ]

[dependencies]
structopt = { version = "0.3", optional = true }
linkme = { version = "0.2", optional = true }
humantime = { version = "2.1.0", optional = true }
num_cpus = { version = "1", optional = true }
async-process = { version = "1.2.0", optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1.52", optional = true }

async-std = { version = "1.10.0", optional = true }
tokio = { version = "1.15.0",  features = ["rt", "sync", "time", "rt-multi-thread"], optional = true }

indexmap = {version = "1.8.0", features = ["serde-1"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.5", optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.integra8_impl]
version = "0.0.5-rc1"
path = "../integra8_impl"

[dependencies.integra8_decorations_impl]
version = "0.0.5-rc1"
path = "../decorations_impl"

[features]
default = ["core", "tokio-runtime"]

core = [
    "structopt", 
    "linkme",
    "humantime", 
    "futures", 
    "async_runtime", 
    "components",
    "decorations",
    "formatters",    
    "results",    
    "scheduling",
    "runner"
]

async_runtime = []
components = [
    "indexmap", 
    "serde_json", 
    "serde", 
    "futures"
]
decorations = [
    "components", 
    "indexmap", 
    "serde_json", 
    "serde", 
    "linkme"
]
formatters = [
    "components", 
    "results", 
    "structopt"
]
results = [
    "components", 
    "indexmap"
]
scheduling = [
    "components", 
    "async_runtime", 
    "num_cpus"
]
runner = [
    "components", 
    "scheduling", 
    "async_runtime", 
    "results", 
    "async-process", 
    "async-trait", 
    "futures"
]

enable_serde = ["serde", "serde_bytes"]

sync = []
async = []

async-std-runtime = [
    "async", 
    "async-std",
    "integra8_impl/async-std-runtime",
]

tokio-runtime = [
    "async", 
    "tokio",
    "integra8_impl/tokio-runtime",
]

