[package]
name = "integra8_results"
version = "0.0.2-alpha"
edition = "2018"
description = """
Test Result objects for the Integra8 test framework.
"""
repository = "https://github.com/jamesjharper/integra8"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
documentation = "https://api.integra8.rs/v0.0.2-alpha/integra8/"
categories = ["development-tools" ]

[dependencies.integra8_components]
version = "0.0.2-alpha"
path = "../components"

[dependencies]
indexmap = "1.8.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.5", optional = true }

[features]
enable_serde = ["integra8_components/enable_serde", "serde", "serde_bytes"]
