[package]
name = "integra8_scheduling"
version = "1.0.0"
edition = "2018"

[dependencies]
futures = "0.3.17"

integra8_components = {path = "../components"}
integra8_context = {path = "../context"}
integra8_async_runtime = {path = "../async_runtime"}

[features]
async-std-runtime = [
    "integra8_async_runtime/async-std-runtime"
]
tokio-runtime = [
    "integra8_async_runtime/tokio-runtime"
]

