[package]
name = "integra8_scheduling"
version = "0.0.1-alpha"
edition = "2018"
description = """
Component scheduling for integra8 test framework.
"""
repository = "https://github.com/jamesjharper/integra8"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
documentation = "https://api.integra8.rs/v0.0.1-alpha/integra8/"
categories = ["development-tools" ]

[dependencies]
futures = "0.3.17"

[dependencies.integra8_components]
version = "0.0.1-alpha"
path = "../components"

[dependencies.integra8_async_runtime]
version = "0.0.1-alpha"
path = "../async_runtime"

[features]
async-std-runtime = [
    "integra8_async_runtime/async-std-runtime"
]
tokio-runtime = [
    "integra8_async_runtime/tokio-runtime"
]

