[package]
name = "basic_sample_tests"
version = "0.1.0"
edition = "2018"


[dependencies]

structopt = { version = "0.3", default-features = false }

indoc = "1.0.3"
linkme = "0.2"
integra8 = {path = "../../core/integra8", features = ["tokio-runtime"] }
integra8_tree_formatter = {path = "../../contrib/formatters/tree_formatter" }

tokio = { version = "1.10.0", features = ["full"] }

reqwest = { version = "0.11", features = ["json"] }