[package]
name = "integra8_serde_formatter"
version = "0.0.5-rc1"
edition = "2018"
description = """
Serde output formatters for displaying test results for the Integra8 test framework.
"""
repository = "https://github.com/jamesjharper/integra8"
readme = "../../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
# Work in progress
#documentation = "https://api.integra8.rs/v0.0.5-rc1/integra8/"
categories = ["development-tools" ]

[dependencies]
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
structopt = "0.3"

[dependencies.integra8]
version = "0.0.5-rc1"
path = "../../../core/integra8"
features = ["enable_serde", "formatters"]
default-features = false

[features]
default = ["yaml"]
yaml = ["serde_yaml"]
json = ["serde_json"]