[package]
name = "integra8_tree_formatter"
version = "0.0.5-rc1"
edition = "2018"
description = """
Tree structured output formatters for displaying test results for the Integra8 test framework.
"""
repository = "https://github.com/jamesjharper/integra8"
readme = "../../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["integra8", "test", "framework", "integration", "bdd"]
# Work in progress
#documentation = "https://api.integra8.rs/v0.0.5-rc1/integra8/"
categories = ["development-tools" ]

[dependencies]
structopt = "0.3"
ansi_term = "0.12.1"
atty = "0.2"
indicatif = "=0.17.0-rc.9"
indexmap = "1.8.0"

[dependencies.integra8]
version = "0.0.5-rc1"
path = "../../../core/integra8"
features = ["formatters"]
default-features = false