[package]
name = "test_basics"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = { version = "1.10.0", optional = true}
tokio = { version = "1.15.0",  features = ["time"], optional = true}

#integra8 = {path = "../../../core/integra8"}
#integra8_tree_formatter = {path = "../../../contrib/formatters/tree_formatter" }
integra8 = "0.0.1-alpha"
integra8_tree_formatter = "0.0.1-alpha"

[features]
async-std-runtime = ["async-std"]
tokio-runtime = ["tokio"]

