[package]
name = "parallel_test_behavior"
version = "0.1.0"
edition = "2018"


[dependencies]
integra8 = {path = "../../../core/integra8", default-features = false, features=["core"] } 
integra8_serde_formatter = {path = "../../../contrib/formatters/serde_formatter", features=["yaml"] }

async-std = { version = "1.10.0", optional = true}
tokio = { version = "1.15.0",  features = ["time"], optional = true}

[features]
async-std-runtime = ["async-std"]
tokio-runtime = ["tokio"]
